--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,20 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+
+# Added by cargo
+
+/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
+/.idea/.gitignore
+/.idea/color-shade-gen-rs.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
